Update  div in online_class.html

--- a/online_class.html
+++ b/online_class.html
@@ -93,10 +93,10 @@
                                 </defs>
                             </svg>
                             <!-- clip path needs to be defined here after the SVG above is loaded otherwise it wont work in Firefox -->
-                            <div id="pastel_page_header">
+                             <div id="pastel_page_header">
                                 <div id="pastel_top_title">
                                     <h1>
-                                       Online Art Class
+                                        Online Art Classes
                                     </h1>
                                     <span></span> 
                                     
