--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <script type='text/javascript' src='assets/js/plugin/slick.min.js'></script>
         <script type='text/javascript' src='assets/js/plugin/dtbaker-page-slider.js'></script>
         <link rel="stylesheet" type="text/css" href="assets/css/content/e76a34c580540623527ed05e120bc8ab.css">
+        <style>
+            p{
+                font-style:verdana;
+            }
+        </style>
     </head>
     <body class="home page-template-default page page-id-62 page-parent custom-background heading_underline_1 pastel_post_option_columns_2 pastel_page_option_title_hide pastel_page_option_width_full pastel_page_option_background_full_width pastel_header_option_header_title_0 pastel_header_option_header_subtitle_0 pastel_header_option_breadcrumb_0 elementor-default elementor-page">
         <div id="page" class="site">
