--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/content/e76a34c580540623527ed05e120bc8ab.css">
         <style>
             p{
-                font-style:verdana;
+               font-family: Verdana, Helvetica, sans-serif;
             }
         </style>
     </head>
