--- a/morning_meditation.html
+++ b/morning_meditation.html
@@ -30,6 +30,11 @@
         <script type='text/javascript' src='assets/js/plugin/slick.min.js'></script>
         <script type='text/javascript' src='assets/js/plugin/dtbaker-page-slider.js'></script>
         <link rel="stylesheet" type="text/css" href="assets/css/content/e76a34c580540623527ed05e120bc8ab.css">
+         <style>
+            p{
+               font-family: Verdana, Helvetica, sans-serif;
+            }
+        </style>
     </head>
     <body class="page-template-default page page-id-70 custom-background heading_underline_1 pastel_post_option_columns_2 pastel_page_option_title_hide pastel_page_option_width_normal pastel_page_option_background_box pastel_header_option_header_title_1 pastel_header_option_header_subtitle_1 pastel_header_option_breadcrumb_1 elementor-default elementor-page">
         <div id="page" class="site">
