--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                                                                                     <p>Strong and rich experience spanning over Twenty Three years of a Colourful journey with Art has 
                                                                                                         made me realize that Colours can do Magic in each of our lives. To spread this, magic and 
                                                                                                         happiness to all, I have worked out exclusive modules keeping in mind particular groups like 
-                                                                                                        Expectant Mothers, New Moms, Kids, <br>Adults ,Senior Citizens, Special Children and Cancer 
+                                                                                                        Expectant Mothers, New Moms, Kids, Adults, Senior Citizens, Special Children and Cancer 
                                                                                                         patients.</p>
                                                                                                 </div>
                                                                                             </div>
